# ChangeLog for net-p2p/rtorrent
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.80 2007/02/03 15:26:00 nixnut Exp $

  03 Feb 2007; nixnut <nixnut@gentoo.org> rtorrent-0.7.1.ebuild:
  Stable on ppc wrt bug 164235

  01 Feb 2007; Markus Rothe <corsair@gentoo.org> rtorrent-0.7.1.ebuild:
  Stable on ppc64; bug #164235

  01 Feb 2007; Timothy Redaelli <drizzt@gentoo.org> rtorrent-0.7.1.ebuild:
  Stable on amd64 wrt bug #164235

  31 Jan 2007; Markus Rothe <corsair@gentoo.org> ChangeLog:
  Stable on ppc64; bug #164235

  28 Jan 2007; Raúl Porcel <armin76@gentoo.org> rtorrent-0.7.1.ebuild:
  x86 stable wrt bug 164235

*rtorrent-0.7.2 (27 Jan 2007)

  27 Jan 2007; Timothy Redaelli <drizzt@gentoo.org> +rtorrent-0.7.2.ebuild:
  Version bump

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> rtorrent-0.6.4.ebuild,
  rtorrent-0.7.1.ebuild:
  Convert to use elog.

  29 Dec 2006; Timothy Redaelli <drizzt@gentoo.org> rtorrent-0.7.1.ebuild:
  Fixed libtorrent dep as reported by Ville Salomäki wrt bug #159353

*rtorrent-0.7.1 (28 Dec 2006)

  28 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> -rtorrent-0.6.0.ebuild,
  -rtorrent-0.7.0.ebuild, +rtorrent-0.7.1.ebuild:
  Version bump and old versions cleanup.

  21 Dec 2006; Markus Rothe <corsair@gentoo.org> rtorrent-0.6.4.ebuild:
  Stable on ppc64; bug #158007

  17 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  rtorrent-0.6.4.ebuild:
  Stable on ppc wrt bug #158007.

  14 Dec 2006; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking rtorrent-0.6.4 ppc64 stable for bug 158007

  13 Dec 2006; Christian Faulhammer <opfer@gentoo.org>
  rtorrent-0.6.4.ebuild:
  stable x86, bug #158007

  13 Dec 2006; Michael Cummings <mcummings@gentoo.org>
  rtorrent-0.6.4.ebuild:
  amd64 stable, bug 158007

*rtorrent-0.7.0 (13 Dec 2006)

  13 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> -rtorrent-0.5.3.ebuild,