@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST rtorrent-0.6.4.tar.gz 438407 RMD160 fa9fb6e8693a9d16926b022f97db6145847bb4c6 SHA1 df3e39a78334284262fe71e9db63b3e47ca5ab29 SHA256 bf8ce2a565a69b26490ad34f4d8f429037bba2e5d3949ee88a03f0ebc1d3250b
 DIST rtorrent-0.7.1.tar.gz 414447 RMD160 01b42bc520abe7a6cae0b31e9b72dd65d4ae6a90 SHA1 cb41c013f82f12dec4962f68a7677eb0b00785cd SHA256 2079c9f4d54b2cfcca5d41be0760ca0d93c6f0f05e3c1f929f66252fbdadcb8b
 DIST rtorrent-0.7.2.tar.gz 439030 RMD160 fed1a84bcb5a2bdd27915cae8eeb15701edbe643 SHA1 f11d8d84a1a3345bfa73b1de5c63de16c83366c3 SHA256 0997f70858be064461e765595ccf2c7c68b4ff0c1bb0288ac7eb327c3b28b56e
@@ -9,14 +12,14 @@ EBUILD rtorrent-0.7.1.ebuild 1485 RMD160 3665b76fa228cf0cc8979d36b7da95561d0e1ca
 MD5 c3b6a9e7d88246f0ee8d45b8c8ac0acf rtorrent-0.7.1.ebuild 1485
 RMD160 3665b76fa228cf0cc8979d36b7da95561d0e1ca2 rtorrent-0.7.1.ebuild 1485
 SHA256 092f8ab5318b64fa7f8404864aff3f27fb86bab3d376951e51fa65597fa0f262 rtorrent-0.7.1.ebuild 1485
-EBUILD rtorrent-0.7.2.ebuild 1489 RMD160 fc554ae759fabf03d5643e23409e078d9f2811e7 SHA1 c8b4f7c04529e3ce9b8b0683ed57e96c7c99dd9f SHA256 c3e037b0fb62cba5229df52fc6195778424e33b9c7439379cb3af55eabd6427d
-MD5 ca8710d831b3356bcaac20d6f643652a rtorrent-0.7.2.ebuild 1489
-RMD160 fc554ae759fabf03d5643e23409e078d9f2811e7 rtorrent-0.7.2.ebuild 1489
-SHA256 c3e037b0fb62cba5229df52fc6195778424e33b9c7439379cb3af55eabd6427d rtorrent-0.7.2.ebuild 1489
-MISC ChangeLog 11421 RMD160 95d370ecb6345ff2da8b37d73d7d0cc6b0ced339 SHA1 791c1a499443a223e9c707b4ff26d70cb0ed3e6a SHA256 cde891ece673121b798787b52a79a3dd131b22ef6e40af576477a1a2f9479e70
-MD5 8ec0173531c565bd3cf4c44136d8dbbb ChangeLog 11421
-RMD160 95d370ecb6345ff2da8b37d73d7d0cc6b0ced339 ChangeLog 11421
-SHA256 cde891ece673121b798787b52a79a3dd131b22ef6e40af576477a1a2f9479e70 ChangeLog 11421
+EBUILD rtorrent-0.7.2.ebuild 1475 RMD160 ce1f2a770283d998bce9fd6f4d94ccb053097b77 SHA1 fd7a3697d7b21ed9196bbff61f01cec667494829 SHA256 5253cfae9d72335c065d72a02d2010bd046f93ac153f67a28bee2a8e88c61123
+MD5 6adb9298fa2064b63797ca7f1c4d63a9 rtorrent-0.7.2.ebuild 1475
+RMD160 ce1f2a770283d998bce9fd6f4d94ccb053097b77 rtorrent-0.7.2.ebuild 1475
+SHA256 5253cfae9d72335c065d72a02d2010bd046f93ac153f67a28bee2a8e88c61123 rtorrent-0.7.2.ebuild 1475
+MISC ChangeLog 11625 RMD160 55387b583986344072744e464f452054b43aba76 SHA1 d889335d4e3b4ddb6b6b053053d2b4053e6166b0 SHA256 72968a73c6557ec77a2222e864c54f46a63c294c5e7a6751e28e3327183aa436
+MD5 53a3c4002d5d05a90b0922d5510e8163 ChangeLog 11625
+RMD160 55387b583986344072744e464f452054b43aba76 ChangeLog 11625
+SHA256 72968a73c6557ec77a2222e864c54f46a63c294c5e7a6751e28e3327183aa436 ChangeLog 11625
 MISC metadata.xml 515 RMD160 885f6ca049fd00711cf0141350892471b75a5ce7 SHA1 853f6219e1fcaf7ef6ecc05f5fb15ebf89580f52 SHA256 3ebf8f9b118e13364d5dae854fac4f16e7bdcb463d7e5bb47da025821c5a220c
 MD5 4bc2c70bd971bfcbea97bf32509320b9 metadata.xml 515
 RMD160 885f6ca049fd00711cf0141350892471b75a5ce7 metadata.xml 515
@@ -30,3 +33,10 @@ SHA256 fb8af322a0eb49a42a39adcb0ecbd8b038e8673904963026d0f5f43da3a35f57 files/di
 MD5 adf6918f93bfd563c49422b14b65eced files/digest-rtorrent-0.7.2 244
 RMD160 501cc64eb7c898fa17aea4515e9a74870b82b459 files/digest-rtorrent-0.7.2 244
 SHA256 e7c867180e3e94c0009b6223038adec7c9c375518b61842be85c287c66a76682 files/digest-rtorrent-0.7.2 244
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.1 (GNU/Linux)
+
+iD8DBQFFxvsLGDyatLGpTbYRArdqAKCSYZCPvE0pHAiTs92IlfQAYZdNWwCcDCfF
+yNto2NsF+Mk0oEegfsyhtxw=
+=S7BS
+-----END PGP SIGNATURE-----
