@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/rtorrent/Attic/rtorrent-0.7.2.ebuild,v 1.1 2007/01/27 15:12:20 drizzt Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/rtorrent/Attic/rtorrent-0.7.2.ebuild,v 1.2 2007/02/05 09:38:06 drizzt Exp $
 
 inherit eutils toolchain-funcs flag-o-matic
 
@@ -17,8 +17,7 @@ RDEPEND=">=net-libs/libtorrent-0.11.2
 	>=dev-libs/libsigc++-2.0
 	>=net-misc/curl-7.12
 	sys-libs/ncurses"
-DEPEND="${RDEPEND}
-	sys-devel/bc"
+DEPEND="${RDEPEND}"
 
 src_compile() {
 	replace-flags -Os -O2
