@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/rtorrent
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.80 2007/02/03 15:26:00 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.81 2007/02/05 09:38:06 drizzt Exp $
+
+  05 Feb 2007; Timothy Redaelli <drizzt@gentoo.org> rtorrent-0.7.2.ebuild:
+  Remove sys-devel/bc dep since 0.7.2 does not need it anymore.
+  Thanks to Sascha Geschwandtner for reporting wrt bug #165393.
 
   03 Feb 2007; nixnut <nixnut@gentoo.org> rtorrent-0.7.1.ebuild:
   Stable on ppc wrt bug 164235
